rpi5/dify/ssrf-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dify-ssrf-proxy
  namespace: dify
  labels:
    app: dify
    component: ssrf-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dify
      component: ssrf-proxy
  template:
    metadata:
      labels:
        app: dify
        component: ssrf-proxy
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: squid
          image: ubuntu/squid:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3128
              name: proxy
          volumeMounts:
            - mountPath: /etc/squid/squid.conf
              name: squid-config
              subPath: squid.conf
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
      volumes:
        - name: squid-config
          configMap:
            name: dify-ssrf-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: dify-ssrf-proxy
  namespace: dify
spec:
  selector:
    app: dify
    component: ssrf-proxy
  ports:
    - port: 3128
      targetPort: 3128
      name: proxy
